--- a/stylenote.css
+++ b/stylenote.css
@@ -24,9 +24,12 @@
 }
 
 i {
-  background: -webkit-linear-gradient(left, #f15c61, #f6916a);
+  background: linear-gradient(to right, #f15c61, #f6916a);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  -moz-background-clip: text;
+  background-clip: text;
+  color: transparent;
 }
 
 .menu1h i {
@@ -35,6 +38,24 @@ i {
 
 .plat i {
   padding: 0 5px 0 5px;
+}
+
+.img1, .img2 {
+  clip-path: ellipse(49% 12% at 50% 50%);
+}
+
+.img1, .img2 {
+  background-color: #3c1218;
+}
+
+.menu1s h3 {
+  text-align: center;
+  background: linear-gradient(to top, #3c1218 0%, #3c1218 1px, transparent 3px) no-repeat;
+  background-size: 0 100%;
+  transition: background-size 1s;
+}
+.menu1s h3:hover {
+  background-size: 100% 100%;
 }
 
 /*# sourceMappingURL=stylenote.css.map */
