--- a/sass/style.scss
+++ b/sass/style.scss
@@ -237,7 +237,7 @@ p{
 }
 
 /*effets graphiques complémentaires*/
-    /*footer*/
+/*footer*/
 .wiggle a{
     animation: headshake 300ms cubic-bezier(.4,.1,.6,.9) infinite;
 }
@@ -250,45 +250,53 @@ $shake-intensity: 3%;
         transform: translateY($shake-intensity);
     }
 }
-    /*points de suspension*/
-    /*Animation points de suspensions
 
-@keyframes points {
-    0%, 100% {
-      transform: translateY(0);
+/*Animation points de suspensions*/
+@keyframes points{
+    0%{
+        opacity: 0.1;
     }
-    10%, 30%, 50%, 70% {
-      transform: translateY(-8px);
+    20%{
+        opacity: 0.4;
     }
-    20%, 40%, 60% {
-      transform: translateY(8px);
+    40%{
+        opacity: 0.7;
     }
-    80% {
-      transform: translateY(6.4px);
+    60% {
+        opacity: 1;
     }
-    90% {
-      transform: translateY(-6.4px);
+    80%{
+        opacity: 0.5;
+    }
+    100% {
+        opacity: 0.1;
     }
   }
-}*/
 .point{
-    animation: infinite;
     display: flex;
     flex-wrap: nowrap;
-}    
-#point1{
-    /*transition: transform 450ms;*/
-    animation-delay: 100ms;
+}
+.point, #point1, #point2, #point3{
+    padding-left: 5px;
+} 
+#point1, #point2, #point3{
+    font-weight: bold;
+    animation: points;
+    animation-iteration-count: infinite;    
+    animation-duration: 1500ms;
+    transition: transform 500ms;
+}     
+ #point1{
+    animation-delay: 0ms;
 }
 #point2{
-    /*transition: transform 450ms;*/
-    animation-delay: 600ms;
+    animation-delay: 500ms;
 }
 #point3{
-    /*transition: transform 450ms;*/
-    animation-delay: 1100ms;
+    animation-delay: 1000ms;
 }
-    /*zoom index:html au passage souris*/
+
+/*zoom index:html au passage souris*/
 .zoom{
     transform: scale(1);
     transition: transform 300ms;
