--- a/sass/style.scss
+++ b/sass/style.scss
@@ -17,8 +17,7 @@ header{
 }    
 main{
     box-sizing: content-box;
-    margin: 15px 50px 50px 50px;
-    padding: 0 35px 35px 35px;
+    margin: 50px 50px 100px 50px;
 }
 .wiggle{        
     position: fixed;
@@ -57,10 +56,10 @@ h1 a{
     flex-wrap: nowrap;
 }
 .note, .delice{
-    margin: 0 15px 0 0;
+    margin-right: 15px;
 }
 .chic, .palette{
-    margin: 0 0 0 15px;
+    margin-left: 15px;
 }
 .note a, .chic a, .delice a, .palette a, h1 a, footer a{
     text-decoration: none;
@@ -72,7 +71,6 @@ h1 a{
     color: $menunote;
 }
 .note i{
-    padding: 0 5px 0 5px;
     background: linear-gradient(to right, rgba(241,92,97) ,rgba(246,145,106));
     @include degrade;
 }
@@ -93,7 +91,7 @@ h1 a{
 .palette h5{
     background: linear-gradient(to right, rgba(65,150,60) ,rgba(184,250,124));
     @include degrade
-  }
+}
 .palette h5, .note h5, .chic h5, .delice h5{  
     font-size: 1.4em;
 }
@@ -147,14 +145,17 @@ h1 a{
     font-family: 'Kaushan Script', cursive;
 }
 .palette h4{
-        font-family: 'Kalam', cursive; 
+    font-family: 'Kalam', cursive; 
 }
 h1, h2, h4, h5, .ligne3{
     justify-content: center; 
     display: flex;   
 }
-.ligne3
-{
+h2{
+    font-family: 'roboto', 'arial';
+    font-size: 2.5em;
+}
+.ligne3{
     box-sizing: content-box;
     width: 35%; 
     margin: auto;
@@ -177,21 +178,21 @@ h1, h2, h4, h5, .ligne3{
     background: linear-gradient(to right, rgba(198,116,18) ,rgba(165,103,153), rgba(110,76,204));
     @include degrade
 }
-
 .menu1s, .menu2s, .menu3s, .menu4s{
     justify-content: center;
-    width: 90%;
-    padding: 20px 15px 20px 30px;
-}
-.menu1h h5, .menu2h h5, .menu3h h5, .menu4h h5{
-    font-size: 2.2em;
-    margin: 5px 0 0 0;
-}
-.menu1s, .menu2s, .menu3s, .menu4s{
-    margin: 50px 0 0 0;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    margin: 0 0 0 0;    
+    padding: 15px 0 0 0; 
+}
+.menu1h, .menu2h, .menu3h, .menu4h{
+    font-size: 3em;
+    padding: 15px 5px 15px 5px;
+}
+.menu1h i{
+    font-size: 1.9em;
 }
 p{
 	display: flex;
@@ -199,79 +200,93 @@ p{
     width: 100%;
     justify-content: space-between;
     font-size: 1.3em;  
-    margin: 15px 15px 15px 15px;  
+    padding: 5px 0 5px 0;
 }
-.prix
-{
+.prix{
 	display: flex;		
 	flex-direction: column;
     width: 20%;
     align-items: flex-end;
 }
+.plat{
+    padding: 0 25px 25px 25px;
+}
 .deco{
     display: flex;
     flex-direction: row;
     justify-content: space-between;    
-    margin: 10px 0 20px 0; 
+    margin: 10px 0 10px 0;
+    width: 100%; 
 }
-.img1{
+.img1, .img2{
     width: 35%;
     height: 1em;
-    
+    margin-top: 10px;
 }
-.img2{
-    width: 35%;
-    height: 1em;
+.menunote, .menuchic, .menupalette, .menudelice{
+    margin: 15px 80px 100px 80px;
 }
-.menunote h3, .menuchic h3, .menupalette h3, .menudelice h3{
-    font-size: 1.2em;
-    padding: 0 15px 0 15px;
-    margin: 0 0 0 0;
+.deco{
+    font-size: 1.2em;    
+    padding: 0;
+}
+h3{
+    margin: 0;
+    font-size: 1.3em;
+}
+h5{
+    margin: 15px 0 15px 0;
+    font-size: 1.4em;
+    font-weight: lighter;
 }
 /*mentions légales*/
-.mention h3{
-    text-align: justify;
-}
 .mention{
-    margin: 10px 5px 60px 5px;
+    margin: 10px 5px 100px 5px;
+    text-align: justify;
 }
 
 /*effets graphiques complémentaires*/
 /*footer*/
-.wiggle a{
+.wiggle a:hover{
     animation: headshake 300ms cubic-bezier(.4,.1,.6,.9) infinite;
 }
 $shake-intensity: 3%;
 @keyframes headshake{
-    25% {
+    25%{
         transform: translateY(-$shake-intensity);
     }
-    75% {
-        transform: translateY($shake-intensity);
+    50%{
+        transform: translateX($shake-intensity);
+    }
+    75%{
+        transform: translateY(-$shake-intensity);
+    }
+    100%{
+        transform: translateX($shake-intensity);
     }
 }
 
 /*Animation points de suspensions*/
 @keyframes points{
     0%{
-        opacity: 0.1;
+        opacity: 0;
     }
-    20%{
+    /*20%{
+        opacity: 0.;
+    }*/
+    25%{
+        opacity: 0.2;
+    }
+    50% {
         opacity: 0.4;
     }
-    40%{
-        opacity: 0.7;
-    }
-    60% {
-        opacity: 1;
-    }
-    80%{
-        opacity: 0.5;
+    75%{
+        opacity: 0.6;
     }
     100% {
-        opacity: 0.1;
+        opacity: 1;
     }
-  }
+}
 .point{
     display: flex;
     flex-wrap: nowrap;
@@ -283,32 +298,30 @@ $shake-intensity: 3%;
     font-weight: bold;
     animation: points;
     animation-iteration-count: infinite;    
-    animation-duration: 1500ms;
+    animation-duration: 900ms;
     transition: transform 500ms;
 }     
  #point1{
     animation-delay: 0ms;
 }
 #point2{
-    animation-delay: 500ms;
+    animation-delay: 300ms;
 }
 #point3{
-    animation-delay: 1000ms;
+    animation-delay: 600ms;
 }
 
 /*zoom index:html au passage souris*/
 .zoom{
     transform: scale(1);
     transition: transform 300ms;
-    &:hover
-    {
+    &:hover{
         transform: scale(1.1);
         font-size: 1.2em;
     }
 }
 /*titre soulignés menudelice et menupalette*/
 .menupalette h3, .menudelice h3{
-    text-align: center;
     background: linear-gradient(to top, #000 0%, #000 1px, transparent 3px) no-repeat;
     background-size: 0 100%;
     transition: background-size 1s;
@@ -321,8 +334,7 @@ $shake-intensity: 3%;
 @media (max-width: 768px){
     /*template*/
     main{
-        margin: 10px 5px 60px 5px;
-        padding: 10px 0 60px 0;
+        margin: 10px 0 80px 0;
     }
     h1 a{
         font-size: 1.8em;
@@ -337,32 +349,28 @@ $shake-intensity: 3%;
         margin: 0 0 0 0;
     }
     /*DRY*/
-    .note, .chic, .delice, .palette{
-        margin: 15px 15px 0 15px;
-        padding: 0 0 0 0;
-        box-sizing: border-box;
+    .note, .chic, .delice, .palette, .menunote, .menuchic, .menudelice, .menupalette{
         width: auto;
+        padding: 0;
     }
-    .palette a, .note a, .chic a, .delice a{  
-        font-size: 1.2em;
-    }    
-    .menu1s, .menuchic, .menudelice, .menupalette{
+    .menunote, .menuchic, .menudelice, .menupalette{
         justify-content: center;
         margin: 10px 10px 30px 10px;
-        padding: 0 0 10px 0;
-        width: auto;
     } 
-    .menu1s, .menuchic, .menudelice, .menupalette{
-        padding: 0 15px 0 0;
+    .mention{
+        margin: 10px 10px 10px 10px;
     }   
-    p{
+    .note, .chic, .delice, .palette{
+        margin: 15px 15px 0 15px;
+        box-sizing: border-box;
+    }
+    .note h5, .chic h5, .delice h5, .palette h5{
+        font-size: 2em;
+    }
+    p, .menunote h5, .menuchic h5, .menudelice h5, .menupalette h5{
         font-size: 1.1em;
     }
-    .img1{
-        width: 20%;
-        height: 2em;
-    }
-    .img2{
+    .img1, .img2{
         width: 20%;
         height: 2em;
     }
