--- a/sass/styledelice.scss
+++ b/sass/styledelice.scss
@@ -1,7 +1,7 @@
 @import "variables.scss";
 @import "mixin.scss";
 
-.menudelice {
+.menudelice{
   background-color: #f9f9f9;
 }
 .menu3h h5{
@@ -14,8 +14,9 @@
 .menu3s{
   font-family: 'Kalam', cursive;
 }
+/*décorations titres*/
  .police1 .img1, .police2 .img1, .police3 .img1{
-  clip-path:polygon(93% 88%, 100% 74%, 96% 100%, 0 100%, 4% 88%);
+  clip-path:polygon(7% 88%, 0% 74%, 4% 100%, 100% 100%, 96% 88%);
 }
 .police1 .img2, .police2 .img2, .police3 .img2{
   clip-path:polygon(93% 88%, 100% 74%, 96% 100%, 0 100%, 4% 88%);
