--- a/sass/stylepalette.scss
+++ b/sass/stylepalette.scss
@@ -14,15 +14,13 @@
 .menu4s{
   font-family: 'Kalam', cursive;
 }
-
+/*décorations titres*/
 .img1{
   clip-path: polygon(62% 90%, 98% 81%, 100% 100%, 40% 100%, 8% 98%, 0 81%, 21% 85%);
   background: linear-gradient(to right, rgba(65,150,60) ,rgba(184,250,124));
-
 }
 .img2{
   clip-path: polygon(62% 90%, 98% 81%, 100% 100%, 40% 100%, 8% 98%, 0 81%, 21% 85%);
   background: linear-gradient(to left, rgba(65,150,60) ,rgba(184,250,124));
-  
 }
 /*# sourceMappingURL=stylepalette.scss.map */
