--- a/stylechic.css
+++ b/stylechic.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .menuchic {
   background-color: #fff5fe;
 }
@@ -16,14 +17,6 @@
   font-family: "Noto Serif", serif;
 }
 
-.police1, .police2, .police3 {
-  margin: 10px 10px 10px 10px;
-}
-
-p {
-  padding: 10px 10px 10px 10px;
-}
-
 .police1 {
   color: #c77412;
 }
@@ -36,7 +29,15 @@ p {
   color: #6e4ccc;
 }
 
-/*clip-path*/
+.police1, .police2, .police3 {
+  margin: 10px 10px 10px 10px;
+}
+
+p {
+  padding: 10px 10px 10px 10px;
+}
+
+/*décorations titres*/
 .police1 .img1, .police2 .img1, .police3 .img1 {
   clip-path: polygon(75% 30%, 100% 50%, 75% 70%, 0 50%);
 }
@@ -57,17 +58,7 @@ p {
   background-color: #6e4ccc;
 }
 
-/*.police1 h3, .police2 h3, .police3 h3{
-    text-align: center;
-    background-size: 0 100%;
-    background: linear-gradient(to top, rgb(199,116,18) 0%, rgb(199,116,18) 1px, transparent 3px) no-repeat;
-    transition: background-size 1s;
-}
-.police1 h3, .police2 h3, .police3 h3{
-    &:hover{
-    background-size: 100% 100%;
-}
-}*/
+/*soulignement titres*/
 .police1 h3 {
   text-align: center;
   background: linear-gradient(to top, #c77412 0%, #c77412 1px, transparent 3px) no-repeat;
@@ -97,29 +88,5 @@ p {
 .police3 h3:hover {
   background-size: 100% 100%;
 }
-
-/*
-.menunote .police1 h3{
-        text-align: center;
-        background: linear-gradient(to top, rgb(199,116,18) 0%, rgb(199,116,18) 1px, transparent 3px) no-repeat;
-        background-size: 0 100%;
-        transition: background-size 1s;
-    }
-.menunote h3:hover, .menuchic h3:hover, .menudelice h3:hover, .menupalette h3:hover{
-        background-size: 100% 100%;
-    }
-    , .menuchic h3, .menudelice h3, .menupalette h3
-    , .menuchic h3:hover, .menudelice h3:hover, .menupalette h3:hover
-
-
-.police1 h3{
-    background: linear-gradient(to top, rgb(199,116,18) 0%, rgb(199,116,18) 1px, transparent 3px) no-repeat;
-}
-.police2 h3{
-    background: linear-gradient(to top, rgba(165,103,153) 0%, rgba(165,103,153) 1px, transparent 3px) no-repeat;
-}
-.police3 h3{
-    background: linear-gradient(to top, rgba(110,76,204) 0%, rgba(110,76,204) 1px, transparent 3px) no-repeat;
-}*/
 
 /*# sourceMappingURL=stylechic.css.map */
