modification du code dégradé sccs - passage ok au w3c / insertion image onglet + description / indentation vérifiée

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -70,26 +70,26 @@ h1 a{
 .note a{
     color: $menunote;
 }
-.note i{
-    background: linear-gradient(to right, rgba(241,92,97) ,rgba(246,145,106));
-    @include degrade;
+i{
+    background: linear-gradient(to right, rgba(241,92,97) 0%,rgba(246,145,106) 100%);
+    @include degrade
 }
 .chic h5 a{
-    background: linear-gradient(to right, rgba(198,116,18) ,rgba(110,76,204));
+    background: linear-gradient(to right, rgba(198,116,18) 0%,rgba(110,76,204) 100%);
     @include degrade
 }
 .delice a{
     color: $menudelice;
 }
 .delice h5{
-    background: linear-gradient(to right, rgba(0,35,219) ,rgba(19,141,255));
+    background: linear-gradient(to right, rgba(0,35,219) 0%,rgba(19,141,255) 100%);
     @include degrade
 }
 .palette a{
     color: $menupalette;
 }
 .palette h5{
-    background: linear-gradient(to right, rgba(65,150,60) ,rgba(184,250,124));
+    background: linear-gradient(to right, rgba(65,150,60) 0%,rgba(184,250,124) 100%);
     @include degrade
 }
 .palette h5, .note h5, .chic h5, .delice h5{  
@@ -175,7 +175,7 @@ h2{
 /*DRY*/
 .chic h5, .menu2h h5{
     font-family: 'Croissant One', cursive;
-    background: linear-gradient(to right, rgba(198,116,18) ,rgba(165,103,153), rgba(110,76,204));
+    background: linear-gradient(to right, rgba(198,116,18) 0%,rgba(165,103,153) 50%, rgba(110,76,204) 100%);
     @include degrade
 }
 .menu1s, .menu2s, .menu3s, .menu4s{
@@ -271,9 +271,6 @@ $shake-intensity: 3%;
     0%{
         opacity: 0;
     }
-    /*20%{
-        opacity: 0.;
-    }*/
     25%{
         opacity: 0.2;
     }
@@ -334,13 +331,13 @@ $shake-intensity: 3%;
 @media (max-width: 768px){
     /*template*/
     main{
-        margin: 10px 0 80px 0;
+        margin: 10px 0 100px 0;
     }
     h1 a{
         font-size: 1.8em;
     }
     footer a{        
-    font-size: 1.2em;
+    font-size: 1em;
     }
     /*index*/
     .ligne{
@@ -349,6 +346,10 @@ $shake-intensity: 3%;
         margin: 0 0 0 0;
     }
     /*DRY*/
+    .menupalette .deco h3, .menudelice .deco h3{
+        font-size: 1em;
+        padding-top: 20px;
+    }
     .note, .chic, .delice, .palette, .menunote, .menuchic, .menudelice, .menupalette{
         width: auto;
         padding: 0;
@@ -368,10 +369,11 @@ $shake-intensity: 3%;
         font-size: 2em;
     }
     p, .menunote h5, .menuchic h5, .menudelice h5, .menupalette h5{
-        font-size: 1.1em;
+        font-size: 1em;
     }
     .img1, .img2{
         width: 20%;
         height: 2em;
+        margin-top: 0;
     }
 }
