--- a/sass/stylechic.scss
+++ b/sass/stylechic.scss
@@ -6,7 +6,7 @@
 }
 .menu2h h5{  
     font-family: 'Croissant One', cursive;
-    background: linear-gradient(to right, rgba(198,116,18) ,rgba(110,76,204));
+    background: linear-gradient(to right, rgba(198,116,18) 0%,rgba(110,76,204) 100%);
     @include degrade  
 } 
 .menu2s{
