--- a/sass/styledelice.scss
+++ b/sass/styledelice.scss
@@ -5,7 +5,7 @@
   background-color: #f9f9f9;
 }
 .menu3h h5{
-  background: linear-gradient(to right, rgba(0,35,219),rgba(19,141,255));
+  background: linear-gradient(to right, rgba(0,35,219) 0%,rgba(19,141,255) 100%);
   @include degrade
 }
 .menu3h h5{
