--- a/stylechic.css
+++ b/stylechic.css
@@ -5,12 +5,9 @@
 
 .menu2h h5 {
   font-family: "Croissant One", cursive;
-  background: linear-gradient(to right, #c67412, #6e4ccc);
-  -webkit-background-clip: text;
+  background: linear-gradient(to right, #c67412 0%, #6e4ccc 100%);
   -webkit-text-fill-color: transparent;
-  -moz-background-clip: text;
-  background-clip: text;
-  color: transparent;
+  -webkit-background-clip: text;
 }
 
 .menu2s {
