--- a/sass/stylepalette.scss
+++ b/sass/stylepalette.scss
@@ -5,7 +5,7 @@
   background-color: $backpalette;
 }
 .menu4h{
-  background: linear-gradient(to right, rgba(65,150,60) ,rgba(184,250,124));
+  background: linear-gradient(to right, rgba(65,150,60) 0%,rgba(184,250,124) 100%);
   @include degrade
 }
 .menu4h h5{
@@ -17,10 +17,10 @@
 /*décorations titres*/
 .img1{
   clip-path: polygon(62% 90%, 98% 81%, 100% 100%, 40% 100%, 8% 98%, 0 81%, 21% 85%);
-  background: linear-gradient(to right, rgba(65,150,60) ,rgba(184,250,124));
+  background: linear-gradient(to right, rgba(65,150,60),rgba(184,250,124));
 }
 .img2{
   clip-path: polygon(62% 90%, 98% 81%, 100% 100%, 40% 100%, 8% 98%, 0 81%, 21% 85%);
-  background: linear-gradient(to left, rgba(65,150,60) ,rgba(184,250,124));
+  background: linear-gradient(to left, rgba(65,150,60),rgba(184,250,124));
 }
 /*# sourceMappingURL=stylepalette.scss.map */
